--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,46 @@
       background:black;
       position: absolute;
       top:50%;
+      /* Default is 50% (which is in the middle of the bar) but 100% it rotate from the right side */
+      transform-origin: 100%;
+      /* So it begins on the 12 o'clock ONLY at the initial stage before the JavaScript is executed by the machine */
+      transform: rotate(90deg);
+      /* Smoother transition as it rotates */
+      transition: all .05s;
+      /* Creates the tic tac effect */
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
 
+    // grabing the hands
+    const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+
+    // Updates the hands position depending on what time it is (rotates the hands)
+    function setDate() {
+      // gives us the seconds of the current time
+      const now = new Date();
+      const seconds = now.getSeconds();
+      // we need to turn the seconds into percents: 0% = 0deg & 100% = 360deg (we add 90 degrees so it begins on the 12 o'clock)
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      // Applying the styles
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+      const minutes = now.getMinutes();
+      const minutesDegrees = ((minutes / 60) * 360) + 90;
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    }
+
+    // How we make the function run every second (1000ms = 1s)
+    setInterval(setDate, 1000);
 
   </script>
 </body>
