--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -15,7 +15,70 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+  // data coming from an external source (this is a city.json file)
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+  // FIRST > fetch the array
+    // we need an empty array to put our cities in
+  const cities = [];
+    // we need to fetch our data
+      // we fetch a promise > it gives us a blob of data that we convert into JSON data
+      // so we're converting the promise of the promise into JSON data
+        // then assign the data to the cities empty array
+        // we use ... so it doesn't add it as an array of the array city but rather each item of the array into the array cities
+  fetch(endpoint)
+    .then(blob => blob.json())
+    .then(data => cities.push(...data));
+
+  // SECOND > filter the array whenever someone types some text
+  function findMatches(wordToMatch, cities) {
+    return cities.filter(place => {
+      // does the city or state matches what was searched
+      // we can't use /wordToMatch/i because it will return the actual wordToMatch
+      // so we need to use it as a variable with the regex const
+      const regex = new RegExp(wordToMatch, 'gi');
+      return place.city.match(regex) || place.state.match(regex);
+    });
+  }
+
+  // THIRD > display the filtered results whenever someone types some text
+    
+    // displaying the population in the right format with commas (so then we add to place.population in the span returned in the function below the numberWithCommas function)
+  function numberWithCommas(x) {
+    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+  }
+  
+  function displayMatches() {
+    // this.value = the value searchInput
+    const matchArray = findMatches(this.value, cities);
+    // we're looping through all the resulats to display them
+    const html = matchArray.map(place => {
+      // format the style of the result
+      const regex = new RegExp(this.value, 'gi');
+        // we're replacing the place.city (in the span returned below) by the formatted cityName
+      const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+        // doing the same for state
+      const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+      // the actual result returned
+      return `
+        <li>
+          <span class="name">${cityName}, ${stateName}</span>
+          <span class="population">${numberWithCommas(place.population)}</span>
+        </li>
+      `;
+    // join turns the results from one big array to one big string
+    }).join('');
+    // display the results in the suggestions class element
+    suggestions.innerHTML = html;
+  }
+
+  const searchInput = document.querySelector('.search');
+  const suggestions = document.querySelector('.suggestions');
+
+  // here we're listening to the change of text input in the search bar and key up
+  searchInput.addEventListener('change', displayMatches);
+  searchInput.addEventListener('keyup', displayMatches);
 
 </script>
   </body>
