--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,42 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    //const isAdult = people.some(function(person) {
+      //const currentYear = (new Date()).getFullYear();
+      //if(currentYear - person.year >= 19) {
+        //return true;
+      //}
+    //});
+      
+      // Let's make it simpler
+    const isAdult = people.some(person => ((new Date()).getFullYear() - person.year) >= 19);
+
+      // Adding curly brackets shows the name of the variable in addition to its state/result
+    console.log({isAdult});
+
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every(person => ((new Date()).getFullYear() - person.year) >= 19);
+    console.log({allAdults});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(comment => comment.id === 823423);
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const index = comments.findIndex(comment => comment.id === 823423);
+    console.log(index);
+    comments.splice(index, 1);
+
+      //we can also use another method in which we create a new array without the item we want to delete
+      //const newComments = [
+        //...comments.slice(0, index),
+        //...comments.slice(index + 1)
+      //];
 
   </script>
 </body>
